# flask-email-login

./: .env.example  .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
app/: __init__.py  auth.py  config.py  email.py  extensions.py  forms.py  models.py  routes.py
app/templates/: csrf_error.html  index.html  layout.html  navigation.html  secure.html
app/templates/auth/: login.html  login_token.html  signup.html
app/templates/email/: login.html  login.txt
migrations/versions/: 0d30e105e4a6_initial_schema.py
tests/: conftest.py  test_auth_flow.py  test_config.py  test_models.py
